# ispipd

./: CMakeLists.txt  README.md  ispipd.service
inc/: ip_retrieval.h  mqtt_client.h  thread_safe_queue.h
src/: ip_retrieval.cpp  main.cpp  mqtt_client.cpp
test/: CMakeLists.txt  test_ip_retrieval.cpp
